DTS: KF: LVDS: updated lvds-related nodes dependencies
This patch fix a LVDS display unavailability on new BSP 3.15.RC.

Jira-Id: ADM-2614
Change-Id: Ie7b008b66cdf8d5af7866a173ceab1d379b50a99
Signed-off-by: Sergii Boryshchenko <sergii.boryshchenko@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/android-kingfisher.dtsi
+++ b/arch/arm64/boot/dts/renesas/android-kingfisher.dtsi
@@ -104,7 +104,7 @@
 
 		port {
 			lvds_in: endpoint {
-				remote-endpoint = <&du_out_lvds0>;
+				remote-endpoint = <&lvds0_out>;
 			};
 		};
 	};
@@ -352,6 +352,16 @@
 
 &ssi8 {
 	shared-pin;
+};
+
+&lvds0 {
+        ports {
+                port@1 {
+                        lvds0_out: endpoint {
+                                remote-endpoint = <&lvds_in>;
+                        };
+                };
+        };
 };
 
 &du {
