DTS: M3N: Activate 4GB DRAM for M3N board.
By default for M3N was active only 2GB SDRAM. Also has added missing
Android specific dts files.

Change-Id: I0352a10acf423729b53aa2e60c852a041e04d563
Jira-Id: ADM-2641
Signed-off-by: Sergii Boryshchenko <sergii.boryshchenko@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/android-m3n-salvator-xs.dts
+++ b/arch/arm64/boot/dts/renesas/android-m3n-salvator-xs.dts
@@ -11,4 +11,22 @@
 
 /dts-v1/;
 #include "r8a77965-salvator-xs.dts"
+#include "android-common.dtsi"
+#include "android-fstab.dtsi"
 #include "android-salvator.dtsi"
+
+/ {
+	model = "Renesas Salvator-X 2nd version board based on r8a77965 4GiB (2 x 2 GiB)";
+	compatible = "renesas,salvator-xs", "renesas,r8a77965";
+
+	memory@48000000 {
+		device_type = "memory";
+		/* first 128MB is reserved for secure area. */
+		reg = <0x0 0x48000000 0x0 0x78000000>;
+	};
+
+	memory@480000000 {
+		device_type = "memory";
+		reg = <0x4 0x80000000 0x0 0x80000000>;
+	};
+};
