--- a/arch/arm64/boot/dts/renesas/android-r8a7795-h3ulcb-kf.dts
+++ b/arch/arm64/boot/dts/renesas/android-r8a7795-h3ulcb-kf.dts
@@ -1,8 +1,8 @@
+// SPDX-License-Identifier: GPL-2.0
 /*
  * Device Tree Source for the H3ULCB Kingfisher board
  *
- * Copyright (C) 2017 Renesas Electronics Corp.
- * Copyright (C) 2017 Cogent Embedded, Inc.
+ * Copyright (C) 2018 GlobalLogic
  *
  * This file is licensed under the terms of the GNU General Public License
  * version 2.  This program is licensed "as is" without any warranty of any
