--- a/arch/arm64/boot/dts/renesas/android-r8a7795-h3ulcb.dts
+++ b/arch/arm64/boot/dts/renesas/android-r8a7795-h3ulcb.dts
@@ -1,8 +1,8 @@
+// SPDX-License-Identifier: GPL-2.0
 /*
  * Device Tree Source for the H3ULCB (R-Car Starter Kit Premier) board
  *
- * Copyright (C) 2016-2018 Renesas Electronics Corp.
- * Copyright (C) 2016 Cogent Embedded, Inc.
+ * Copyright (C) 2018 GlobalLogic
  *
  * This file is licensed under the terms of the GNU General Public License
  * version 2.  This program is licensed "as is" without any warranty of any
@@ -44,13 +44,13 @@
 		ranges;
 
 		/* device specific region for Lossy Decompression */
-		lossy_decompress: linux,lossy_decompress {
+		lossy_decompress: linux,lossy_decompress@54000000 {
 			no-map;
 			reg = <0x00000000 0x54000000 0x0 0x03000000>;
 		};
 
 		/* global autoconfigured region for contiguous allocations */
-		linux,cma {
+		linux,cma@57000000 {
 			compatible = "shared-dma-pool";
 			reusable;
 			reg = <0x00000000 0x57000000 0x0 0x19000000>;
@@ -58,7 +58,7 @@
 		};
 
 		/* device specific region for contiguous allocations */
-		mmp_reserved: linux,multimedia {
+		mmp_reserved: linux,multimedia@70000000 {
 			compatible = "shared-dma-pool";
 			reusable;
 			reg = <0x00000000 0x70000000 0x0 0x10000000>;
