--- a/arch/arm64/configs/android_p_kingfisher_defconfig
+++ b/arch/arm64/configs/android_p_kingfisher_defconfig
@@ -66,7 +66,7 @@ CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
 CONFIG_ARM64_SW_TTBR0_PAN=y
 CONFIG_RANDOMIZE_BASE=y
-CONFIG_CMDLINE="console=ttySC0,115200 androidboot.console=ttySC0 androidboot.hardware=kingfisher init=/init"
+CONFIG_CMDLINE="console=ttySC0,115200 androidboot.console=ttySC0 androidboot.hardware=kingfisher init=/init loop.max_part=7"
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_EFI is not set
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
