dts: fix distorted LVDS image for LVDS panel.
This patch fix issue with distorted LVDS image, when LVDS panel is
work together with external HDMI on Kingfisher by switching ISP
(Image Signal Processor) to 6-bit mode. Patch provided by Renesas.

Jira-ID: ADM-2319

Change-Id: I6f3e39e2f8ec3c52807f937748cb4dc0ca6d55b9
Signed-off-by: Dmytro Firsov <dmytro.firsov@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/ulcb-kf.dtsi
+++ b/arch/arm64/boot/dts/renesas/ulcb-kf.dtsi
@@ -193,3 +193,12 @@
 &xhci0 {
 	status = "okay";
 };
+
+&gpio2 {
+	lvds_pin19{
+		gpio-hog;
+		gpios = <2 GPIO_ACTIVE_HIGH>;
+		output-low;
+		line-name = "LVDS pin 19";
+	};
+};
