DTS: Overlay: Add LVDS configuration option LVDS_PANEL_MODEL
All LVDS related DT nodes moved to overlay. An overlay is choosing at
compiletime by means of the setting environment variable LVDS_PANEL_MODEL
to one from the next values:
 - TX31D200VM0BAA - KOE TX31D200VM0BAA 1280x480 panel;
 - AA104XD12 - Mitsubishi AA104XD12 1024x768 panel;
 - AA121TD01 - Mitsubishi AA121TD01 1280x800 panel (default).

Jira-ID: ADM-2634
Change-Id: Ib7501f50e2060234ddcfc2356e08ea1edddf6221
Signed-off-by: Sergii Boryshchenko <sergii.boryshchenko@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/Makefile
+++ b/arch/arm64/boot/dts/renesas/Makefile
@@ -19,6 +19,15 @@ dtb-$(CONFIG_ARCH_R8A7795) += r8a7795v3-salvator-overlay.dtb
 dtb-$(CONFIG_ARCH_R8A7795) += ulcb-kf-adsp-overlay.dtb
 dtb-$(CONFIG_ARCH_R8A7795) += salvator-adsp-overlay.dtb
 dtb-$(CONFIG_ARCH_R8A7795) += partitions-overlay.dtb
+dtb-$(CONFIG_ARCH_R8A7795) += lvds-AA104XD12-overlay.dtb
+dtb-$(CONFIG_ARCH_R8A7795) += lvds-AA121TD01-overlay.dtb
+dtb-$(CONFIG_ARCH_R8A7795) += lvds-TX31D200VM0BAA-overlay.dtb
+dtb-$(CONFIG_ARCH_R8A7796) += lvds-AA104XD12-overlay.dtb
+dtb-$(CONFIG_ARCH_R8A7796) += lvds-AA121TD01-overlay.dtb
+dtb-$(CONFIG_ARCH_R8A7796) += lvds-TX31D200VM0BAA-overlay.dtb
+dtb-$(CONFIG_ARCH_R8A77965) += lvds-AA104XD12-overlay.dtb
+dtb-$(CONFIG_ARCH_R8A77965) += lvds-AA121TD01-overlay.dtb
+dtb-$(CONFIG_ARCH_R8A77965) += lvds-TX31D200VM0BAA-overlay.dtb
 
 DTC_FLAGS	+= -@
 always		:= $(dtb-y)
