--- a/arch/arm64/boot/dts/renesas/android-kingfisher.dtsi
+++ b/arch/arm64/boot/dts/renesas/android-kingfisher.dtsi
@@ -67,27 +67,7 @@
 		};
 	};
 
-	lvds {
-		compatible = "panel-lvds";
-
-		width-mm = <210>;
-		height-mm = <158>;
-
-		data-mapping = "jeida-24";
-
-		panel-timing {
-			/* 1024x768 @60Hz */
-			clock-frequency = <65000000>;
-			hactive = <1024>;
-			vactive = <768>;
-			hsync-len = <136>;
-			hfront-porch = <20>;
-			hback-porch = <160>;
-			vfront-porch = <3>;
-			vback-porch = <29>;
-			vsync-len = <6>;
-		};
-
+	lvds: lvds {
 		port {
 			lvds_in: endpoint {
 				remote-endpoint = <&lvds0_out>;
