android/ion: Switch to new ION implementation with separated heap
Change-Id: I811412572895af5e285271c41d31144d6dee69e9
Signed-off-by: Oleksii Gulchenko <oleksii.gulchenko@globallogic.com>

--- a/arch/arm64/configs/android_p_ulcb_defconfig
+++ b/arch/arm64/configs/android_p_ulcb_defconfig
@@ -423,6 +423,7 @@ CONFIG_SW_SYNC=y
 CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 CONFIG_ION=y
+CONFIG_ION_OF=y
 CONFIG_ION_RCAR=y
 CONFIG_BOOTLOADER_CONTROL=y
 CONFIG_COMMON_CLK_SCPI=y
