--- a/arch/arm64/boot/dts/renesas/android-salvator.dtsi
+++ b/arch/arm64/boot/dts/renesas/android-salvator.dtsi
@@ -24,6 +24,16 @@
 	memory_ch4: memory@700000000 {
 	};
 
+	ion {
+		compatible = "renesas,ion-rcar";
+
+		ion_heap {
+			compatible = "renesas,ion-rcar-heap";
+			memory-region = <&ion_reserved>;
+			heap-name = "rcar-ion";
+		};
+	};
+
 	gpio_keys {
 		compatible = "gpio-keys";
 
