dts: Moved LVDS port@1 to LVDS panels overlays
This patch fixes issue with non-working graphics on SK/KF without applying
any LVDS overlay.

Change-Id: I5457961f38d114601bfd14187f65de0a9c617976
Jira-ID: AMD-2869
Signed-off-by: Dmytro Firsov <dmytro.firsov@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/lvds-TX31D200VM0BAA-overlay.dts
+++ b/arch/arm64/boot/dts/renesas/lvds-TX31D200VM0BAA-overlay.dts
@@ -52,3 +52,13 @@
 		line-name = "BL PWM 100%";
 	};
 };
+
+&lvds0 {
+	ports {
+		port@1 {
+			lvds0_out: endpoint {
+				remote-endpoint = <&lvds_in>;
+			};
+		};
+	};
+};
