--- a/arch/arm64/boot/dts/renesas/lvds-AA104XD12-overlay.dts
+++ b/arch/arm64/boot/dts/renesas/lvds-AA104XD12-overlay.dts
@@ -52,3 +52,13 @@
 		line-name = "LVDS Scan Direction Normal";
 	};
 };
+
+&lvds0 {
+	ports {
+		port@1 {
+			lvds0_out: endpoint {
+				remote-endpoint = <&lvds_in>;
+			};
+		};
+	};
+};
