--- a/arch/arm64/boot/dts/renesas/lvds-AA121TD01-overlay.dts
+++ b/arch/arm64/boot/dts/renesas/lvds-AA121TD01-overlay.dts
@@ -50,3 +50,13 @@
 		line-name = "BL PWM 100%";
 	};
 };
+
+&lvds0 {
+	ports {
+		port@1 {
+			lvds0_out: endpoint {
+				remote-endpoint = <&lvds_in>;
+			};
+		};
+	};
+};
