bootreason: reboot reason stored in RAM, shutdown reason stored in BCB
Change-Id: Ia1473799ddb3a935eee1be2a6619b54c20292945
Signed-off-by: Dmytro Prokopchuk <dmytro.prokopchuk@globallogic.com>
Mantis-ID: (#0004532)
Jira-ID: ADM-2873

--- a/arch/arm64/configs/android_p_kingfisher_defconfig
+++ b/arch/arm64/configs/android_p_kingfisher_defconfig
@@ -13,7 +13,6 @@ CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
-CONFIG_LOG_BUF_SHIFT=17
 CONFIG_MEMCG=y
 CONFIG_MEMCG_SWAP=y
 CONFIG_RT_GROUP_SCHED=y
@@ -428,6 +427,7 @@ CONFIG_ION=y
 CONFIG_ION_OF=y
 CONFIG_ION_RCAR=y
 CONFIG_BOOTLOADER_CONTROL=y
+CONFIG_BOOT_REASON=y
 CONFIG_COMMON_CLK_SCPI=y
 CONFIG_COMMON_CLK_CS2000_CP=y
 # CONFIG_COMMON_CLK_XGENE is not set
