--- a/arch/arm64/configs/android_kingfisher_defconfig
+++ b/arch/arm64/configs/android_kingfisher_defconfig
@@ -429,6 +429,7 @@ CONFIG_ION=y
 CONFIG_ION_OF=y
 CONFIG_ION_RCAR=y
 CONFIG_BOOTLOADER_CONTROL=y
+CONFIG_BOOT_REASON=y
 CONFIG_COMMON_CLK_SCPI=y
 CONFIG_COMMON_CLK_CS2000_CP=y
 # CONFIG_COMMON_CLK_XGENE is not set
