--- a/drivers/staging/android/Makefile
+++ b/drivers/staging/android/Makefile
@@ -6,3 +6,4 @@ obj-$(CONFIG_FIQ_DEBUGGER)		+= fiq_debugger/
 obj-$(CONFIG_ASHMEM)			+= ashmem.o
 obj-$(CONFIG_ANDROID_VSOC)		+= vsoc.o
 obj-$(CONFIG_BOOTLOADER_CONTROL)	+= bcb.o
+obj-$(CONFIG_BOOT_REASON)	+= bootreason.o
