--- a/arch/arm64/boot/dts/renesas/android-m3n-salvator-xs.dts
+++ b/arch/arm64/boot/dts/renesas/android-m3n-salvator-xs.dts
@@ -57,7 +57,7 @@
 		};
 
 		/* global autoconfigured region for contiguous allocations */
-		memory_cma: linux,cma@58000000 {
+		cma_reserved: linux,cma@58000000 {
 			compatible = "shared-dma-pool";
 			reusable;
 			reg = <0x00000000 0x58000000 0x0 0x08000000>; /* 128Mb */
