--- a/arch/arm64/configs/android_p_kingfisher_defconfig
+++ b/arch/arm64/configs/android_p_kingfisher_defconfig
@@ -169,6 +169,9 @@ CONFIG_IP_NF_IPTABLES=y
 CONFIG_IP_NF_MATCH_AH=y
 CONFIG_IP_NF_MATCH_ECN=y
 CONFIG_IP_NF_MATCH_RPFILTER=y
+CONFIG_NETFILTER_ADVANCED=y
+CONFIG_IP6_NF_MATCH_RPFILTER=y
+CONFIG_NETFILTER_XT_TARGET_CT=y
 CONFIG_IP_NF_MATCH_TTL=y
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
