--- a/arch/arm64/configs/android_p_salvator-x_defconfig
+++ b/arch/arm64/configs/android_p_salvator-x_defconfig
@@ -421,6 +421,8 @@ CONFIG_USB_RENESAS_USB3=m
 CONFIG_USB_CONFIGFS=y
 CONFIG_USB_CONFIGFS_MASS_STORAGE=y
 CONFIG_USB_CONFIGFS_F_FS=y
+CONFIG_USB_CONFIGFS_F_MTP=y
+CONFIG_USB_CONFIGFS_F_PTP=y
 CONFIG_USB_CONFIGFS_F_ACC=y
 CONFIG_USB_CONFIGFS_F_AUDIO_SRC=y
 CONFIG_USB_CONFIGFS_UEVENT=y
