dts: change keyboard to gpio_keys
Change name of node 'keyboard' to 'gpio_keys' (like in salvator).

Jira-ID: ADM-3067
Signed-off-by: Oleksandr Derkach <oleksandr.derkach@globallogic.com>
Change-Id: Ica47145d68ad8233ce97f0985cb8f7d468479f73

--- a/arch/arm64/boot/dts/renesas/android-h3ulcb.dts
+++ b/arch/arm64/boot/dts/renesas/android-h3ulcb.dts
@@ -15,8 +15,10 @@
 #include "android-h3.dtsi"
 
 / {
-	keyboard {
-		/delete-node/key-1;
+	/delete-node/keyboard;
+
+	gpio_keys {
+		compatible = "gpio-keys";
 
 		power {
 			label = "SW-3";
