defconfig/dts: Enabled CAN port for Salvator board on Android Q
Jira-Id: ADM-3084

Signed-off-by: Oleksii Gulchenko <oleksii.gulchenko@globallogic.com>
Change-Id: Idd7341345edd594986f86b0b3291a1a9bf93b7cb
Signed-off-by: Oleh Cherpak <oleh.cherpak@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/android/salvator.dtsi
+++ b/arch/arm64/boot/dts/renesas/android/salvator.dtsi
@@ -113,3 +113,27 @@
 				"DAI0 Capture", "ak4613 Capture";
         dais = <&rsnd_port0>;
 };
+
+&pfc {
+	can0_pins: can0 {
+		groups = "can0_data_a";
+		function = "can0";
+	};
+
+	can1_pins: can1 {
+		groups = "can1_data";
+		function = "can1";
+	};
+};
+
+&can0 {
+	pinctrl-0 = <&can0_pins>;
+	pinctrl-names = "default";
+	status = "okay";
+};
+
+&can1 {
+	pinctrl-0 = <&can1_pins>;
+	pinctrl-names = "default";
+	status = "okay";
+};
