--- a/arch/arm64/configs/android_q_salvator-x_defconfig
+++ b/arch/arm64/configs/android_q_salvator-x_defconfig
@@ -210,6 +210,8 @@ CONFIG_NET_EMATCH_U32=y
 CONFIG_NET_CLS_ACT=y
 CONFIG_BPF_JIT=y
 CONFIG_CAN=y
+CONFIG_CAN_RCAR=y
+CONFIG_CAN_DEBUG_DEVICES=y
 CONFIG_BT=y
 # CONFIG_BT_BREDR is not set
 # CONFIG_BT_LE is not set
