--- a/arch/arm64/boot/dts/renesas/android-fstab.dtsi
+++ b/arch/arm64/boot/dts/renesas/android-fstab.dtsi
@@ -21,7 +21,7 @@
 
             vbmeta: vbmeta {
                 compatible = "android,vbmeta";
-                parts = "vbmeta,boot,system,vendor,dtb";
+                parts = "vbmeta,boot,system,vendor,dtb,product";
             };
 
             fstab: fstab {
@@ -30,6 +30,14 @@
                 vendor {
                     compatible = "android,vendor";
                     dev = "/dev/block/platform/soc/ee140000.sd/by-name/vendor";
+                    type = "ext4";
+                    mnt_flags = "ro,barrier=1";
+                    fsmgr_flags = "wait,slotselect,avb";
+                };
+
+                product {
+                    compatible = "android,product";
+                    dev = "/dev/block/platform/soc/ee140000.sd/by-name/product";
                     type = "ext4";
                     mnt_flags = "ro,barrier=1";
                     fsmgr_flags = "wait,slotselect,avb";
