--- a/arch/arm64/boot/dts/renesas/android-fstab.dtsi
+++ b/arch/arm64/boot/dts/renesas/android-fstab.dtsi
@@ -16,31 +16,26 @@
             method = "smc";
         };
 
-        android {
+        android: android {
             compatible = "android,firmware";
-
-            vbmeta: vbmeta {
-                compatible = "android,vbmeta";
-                parts = "vbmeta,boot,system,vendor,dtb,product";
-            };
 
             fstab: fstab {
                 compatible = "android,fstab";
 
-                vendor {
+                vendor_part: vendor {
                     compatible = "android,vendor";
                     dev = "/dev/block/platform/soc/ee140000.sd/by-name/vendor";
                     type = "ext4";
                     mnt_flags = "ro,barrier=1";
-                    fsmgr_flags = "wait,slotselect,avb";
+                    fsmgr_flags = "wait,slotselect";
                 };
 
-                product {
+                product_part: product {
                     compatible = "android,product";
                     dev = "/dev/block/platform/soc/ee140000.sd/by-name/product";
                     type = "ext4";
                     mnt_flags = "ro,barrier=1";
-                    fsmgr_flags = "wait,slotselect,avb";
+                    fsmgr_flags = "wait,slotselect";
                 };
             };
         };
