DTS:SK/KF: return to original dts file hierarchy
To workaround a problem of unordered camera ports probing which led to
kernel crash, extra dts files were created. Now when the aforementioned
problem is fixed we can remove these extras.

Jira-Id: ADM-3103
Change-Id: I9a6ac4f74a5b0093141155729353bc56efdb7f49
Signed-off-by: Sergii Boryshchenko <sergii.boryshchenko@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/android-h3-kingfisher.dts
+++ b/arch/arm64/boot/dts/renesas/android-h3-kingfisher.dts
@@ -11,7 +11,7 @@
 
 /dts-v1/;
 #define __H3ULCB_OVERWRITE__
-#include "android-r8a7795-h3ulcb-kf.dts"
+#include "r8a7795-h3ulcb-kf.dts"
 #include "android-h3ulcb.dts"
 #include "android-kingfisher.dtsi"
 #include "ulcb-kf-cn10.dtsi"
