dts: Add odm partition to Android fstab
Jira-ID: ADM-2372
Jira-ID: ADM-3021
Signed-off-by: Dmytro Firsov <dmytro.firsov@globallogic.com>
Change-Id: I29ed8ff89fb68c85cdfe6d0820c8223cace3f736

--- a/arch/arm64/boot/dts/renesas/android-avb-overlay.dts
+++ b/arch/arm64/boot/dts/renesas/android-avb-overlay.dts
@@ -13,7 +13,7 @@
 &android {
     vbmeta {
         compatible = "android,vbmeta";
-        parts = "vbmeta,boot,system,vendor,product";
+        parts = "vbmeta,boot,system,vendor,product,odm";
     };
 };
 
@@ -22,5 +22,9 @@
 };
 
 &product_part {
+    fsmgr_flags = "wait,slotselect,avb";
+};
+
+&odm_part {
     fsmgr_flags = "wait,slotselect,avb";
 };
