--- a/arch/arm64/boot/dts/renesas/android-avb-overlay.dts
+++ b/arch/arm64/boot/dts/renesas/android-avb-overlay.dts
@@ -13,7 +13,7 @@
 &android {
     vbmeta {
         compatible = "android,vbmeta";
-        parts = "vbmeta,boot,system,vendor,dtb,product";
+        parts = "vbmeta,boot,system,vendor,product";
     };
 };
 
