DTS/DTSI: hierarchical ordering Android-specific DTS extensions.
Jira-Id: ADM-3103
Change-Id: Ieecf5dd10f5e2c611cb944eae93fa59bca7a0a0e
Signed-off-by: Sergii Boryshchenko <sergii.boryshchenko@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/Makefile
+++ b/arch/arm64/boot/dts/renesas/Makefile
@@ -1,35 +1,17 @@
 # SPDX-License-Identifier: GPL-2.0
-dtb-$(CONFIG_ARCH_R8A7795) += android-h3-salvator-x.dtb
-dtb-$(CONFIG_ARCH_R8A7795) += android-h3-salvator-xs.dtb
-dtb-$(CONFIG_ARCH_R8A7795) += android-h3-salvator-xs-2x2g.dtb
-dtb-$(CONFIG_ARCH_R8A7795) += android-h3ulcb.dtb
-dtb-$(CONFIG_ARCH_R8A7795) += android-h3ulcb-4x2g.dtb
-dtb-$(CONFIG_ARCH_R8A7795) += android-h3-kingfisher.dtb
-dtb-$(CONFIG_ARCH_R8A7795) += android-h3-kingfisher-4x2g.dtb
-dtb-$(CONFIG_ARCH_R8A7796) += android-m3-salvator-x.dtb
-dtb-$(CONFIG_ARCH_R8A7796) += android-m3-salvator-xs.dtb
-dtb-$(CONFIG_ARCH_R8A77965) += android-m3n-salvator-xs.dtb
+dtb-$(CONFIG_ARCH_R8A7795) +=  r8a7795-salvator-x-android.dtb
+dtb-$(CONFIG_ARCH_R8A7795) +=  r8a7795-salvator-xs-2x2g-android.dtb
+dtb-$(CONFIG_ARCH_R8A7795) +=  r8a7795-salvator-xs-android.dtb
+dtb-$(CONFIG_ARCH_R8A7795) +=  r8a7795-ulcb-4x2g-android.dtb
+dtb-$(CONFIG_ARCH_R8A7795) +=  r8a7795-ulcb-android.dtb
+dtb-$(CONFIG_ARCH_R8A7795) +=  r8a7795-ulcb-kf-4x2g-android.dtb
+dtb-$(CONFIG_ARCH_R8A7795) +=  r8a7795-ulcb-kf-android.dtb
+dtb-$(CONFIG_ARCH_R8A7796) +=  r8a7796-salvator-x-android.dtb
+dtb-$(CONFIG_ARCH_R8A7796) +=  r8a7796-salvator-xs-android.dtb
+dtb-$(CONFIG_ARCH_R8A77965) += r8a77965-salvator-xs-android.dtb
 
-dtb-$(CONFIG_ARCH_R8A7795) += r8a7795-salvator-4x2g-overlay.dtb
-dtb-$(CONFIG_ARCH_R8A7795) += r8a7795-h3ulcb-4x2g-overlay.dtb
-dtb-$(CONFIG_ARCH_R8A7795) += r8a7795v2-h3ulcb-kf-overlay.dtb
-dtb-$(CONFIG_ARCH_R8A7795) += r8a7795v2-salvator-overlay.dtb
-dtb-$(CONFIG_ARCH_R8A7795) += r8a7795v3-h3ulcb-kf-overlay.dtb
-dtb-$(CONFIG_ARCH_R8A7795) += r8a7795v3-salvator-overlay.dtb
-dtb-$(CONFIG_ARCH_R8A7795) += ulcb-kf-adsp-overlay.dtb
-dtb-$(CONFIG_ARCH_R8A7795) += salvator-adsp-overlay.dtb
-dtb-$(CONFIG_ARCH_R8A7795) += lvds-AA104XD12-overlay.dtb
-dtb-$(CONFIG_ARCH_R8A7795) += lvds-AA121TD01-overlay.dtb
-dtb-$(CONFIG_ARCH_R8A7795) += lvds-TX31D200VM0BAA-overlay.dtb
-dtb-$(CONFIG_ARCH_R8A7795) += android-avb-overlay.dtb
-dtb-$(CONFIG_ARCH_R8A7796) += lvds-AA104XD12-overlay.dtb
-dtb-$(CONFIG_ARCH_R8A7796) += lvds-AA121TD01-overlay.dtb
-dtb-$(CONFIG_ARCH_R8A7796) += lvds-TX31D200VM0BAA-overlay.dtb
-dtb-$(CONFIG_ARCH_R8A7796) += android-avb-overlay.dtb
-dtb-$(CONFIG_ARCH_R8A77965) += lvds-AA104XD12-overlay.dtb
-dtb-$(CONFIG_ARCH_R8A77965) += lvds-AA121TD01-overlay.dtb
-dtb-$(CONFIG_ARCH_R8A77965) += lvds-TX31D200VM0BAA-overlay.dtb
-dtb-$(CONFIG_ARCH_R8A77965) += android-avb-overlay.dtb
+dts-dirs	:= overlays
+subdir-y	:= $(dts-dirs)
 
 DTC_FLAGS	+= -@
 always		:= $(dtb-y)
