--- a/arch/arm64/boot/dts/renesas/r8a7795-salvator-xs-2x2g-android.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-salvator-xs-2x2g-android.dts
@@ -11,4 +11,4 @@
 
 #include "r8a7795-salvator-xs-2x2g.dts"
 #define __H3_SALVATOR_XS_OVERRIDE__
-#include "android-h3-salvator-xs.dts"
+#include "r8a7795-salvator-xs-android.dts"
