--- a/arch/arm64/boot/dts/renesas/overlays/android-avb-overlay.dts
+++ b/arch/arm64/boot/dts/renesas/overlays/android-avb-overlay.dts
@@ -13,18 +13,6 @@
 &android {
     vbmeta {
         compatible = "android,vbmeta";
-        parts = "vbmeta,boot,system,vendor,product,odm";
+        parts = "vbmeta,boot,dtbo";
     };
-};
-
-&vendor_part {
-    fsmgr_flags = "wait,slotselect,avb";
-};
-
-&product_part {
-    fsmgr_flags = "wait,slotselect,avb";
-};
-
-&odm_part {
-    fsmgr_flags = "wait,slotselect,avb";
 };
