salvator.dtsi: Change linux codes for gpio switches
Needed for using common vehicle hal.

Jira-Id: ADM-3277
Change-Id: I3267106901764a54b9d04963c577953a3d0079b8
Signed-off-by: Oleh Cherpak <oleh.cherpak@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/android/salvator.dtsi
+++ b/arch/arm64/boot/dts/renesas/android/salvator.dtsi
@@ -59,13 +59,13 @@
 		soft_sw0 {
 			label = "SW-4-1";
 			gpios = <&gpio5 17 GPIO_ACTIVE_LOW>;
-			linux,code = <KEY_CAMERA>;
+			linux,code = <KEY_F4>;
 		};
 
 		soft_sw1 {
 			label = "SW-4-2";
 			gpios = <&gpio5 20 GPIO_ACTIVE_LOW>;
-			linux,code = <KEY_SOUND>;
+			linux,code = <KEY_F3>;
 		};
 
 		soft_sw2 {
