--- a/arch/arm64/configs/android_q_kingfisher_defconfig
+++ b/arch/arm64/configs/android_q_kingfisher_defconfig
@@ -215,6 +215,9 @@ CONFIG_CAN_DEBUG_DEVICES=y
 CONFIG_CFG80211=y
 CONFIG_MAC80211=y
 CONFIG_RFKILL=y
+CONFIG_RFKILL_INPUT=y
+CONFIG_RFKILL_REGULATOR=y
+CONFIG_RFKILL_GPIO=y
 CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
