dts: Added proper support for Salvator-XS M3 ES3.0
Signed-off-by: Dmytro Prokopchuk <dmytro.prokopchuk@globallogic.com>
Jira-ID: ADM-3428
Change-Id: Ibf5234f0779c02f144c842efcf8d205f0ba20bd6

--- a/arch/arm64/boot/dts/renesas/r8a7796-salvator-xs-2x4g.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7796-salvator-xs-2x4g.dts
@@ -13,7 +13,7 @@
 #include "salvator-xs.dtsi"
 
 / {
-	model = "Renesas Salvator-X 2nd version board based on r8a7796 ES3.0+ with 8GiB (2 x 4 GiB)";
+	model = "Renesas Salvator-XS 2nd version board based on r8a7796 ES3.0+ with 8GiB (2 x 4 GiB)";
 	compatible = "renesas,salvator-xs", "renesas,r8a7796";
 
 	memory@48000000 {
