--- a/arch/arm64/boot/dts/renesas/Makefile
+++ b/arch/arm64/boot/dts/renesas/Makefile
@@ -8,6 +8,7 @@ dtb-$(CONFIG_ARCH_R8A7795) +=  r8a7795-ulcb-kf-4x2g-android.dtb
 dtb-$(CONFIG_ARCH_R8A7795) +=  r8a7795-ulcb-kf-android.dtb
 dtb-$(CONFIG_ARCH_R8A7796) +=  r8a7796-salvator-x-android.dtb
 dtb-$(CONFIG_ARCH_R8A7796) +=  r8a7796-salvator-xs-android.dtb
+dtb-$(CONFIG_ARCH_R8A7796) +=  r8a7796-salvator-xs-2x4g-android.dtb
 dtb-$(CONFIG_ARCH_R8A77965) += r8a77965-salvator-xs-android.dtb
 
 dts-dirs	:= overlays
