dts: Add node for passing partition layout from U-boot
This commit adds device tree node where U-boot will place partition
layout (name, slot, size, type for fastbootd) at boottime.

Jira-ID: ADM-3410
Signed-off-by: Dmytro Firsov <dmytro.firsov@globallogic.com>
Change-Id: I721d56c9b76688d6800bc05be3b88c2e7b835cea

--- a/arch/arm64/boot/dts/renesas/android/common.dtsi
+++ b/arch/arm64/boot/dts/renesas/android/common.dtsi
@@ -17,4 +17,10 @@
 		compatible = "key-long-press";
 		key_down_delay = <10000>;
 	};
+
+	android {
+		partitions {
+			/* Should be filled by U-boot at boottime */
+		};
+	};
 };
