temporarily disable HS400 due to unstable functionality
Jira-Id: ADM-4735
Change-Id: Ia934895352a51c43b8f4621eb974ebaeda59b6a4
Signed-off-by: Leonid Komaryanskiy <leonid.komaryanskiy@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/salvator-common.dtsi
+++ b/arch/arm64/boot/dts/renesas/salvator-common.dtsi
@@ -976,6 +976,7 @@
 	fixed-emmc-driver-type = <1>;
 	full-pwr-cycle-in-suspend;
 	status = "okay";
+	/delete-property/ mmc-hs400-1_8v;
 };
 
 &sdhi3 {
