--- a/arch/arm64/boot/dts/renesas/android/overlays/r8a7795-salvator-4x2g-overlay.dts
+++ b/arch/arm64/boot/dts/renesas/android/overlays/r8a7795-salvator-4x2g-overlay.dts
@@ -48,3 +48,8 @@
 	/* Map all possible DDR as inbound ranges */
 	dma-ranges = <0x42000000 0 0x40000000 0 0x40000000 0 0x80000000>;
 };
+
+&ion_reserved {
+	compatible = "shared-dma-pool";
+	reg = <0x00000000 0x68000000 0x0 0x20000000>; /* 512Mb */
+};
