fix applying overlays for lvds panel
Add lvds node and move "okay" status to overlays.

Jira-Id: ADM-5021
Change-Id: I382319e023d1512405a8810ab7b72e806d3dd2c6
Signed-off-by: Leonid Komaryanskiy <leonid.komaryanskiy@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/android/h3ulcb-kf.dtsi
+++ b/arch/arm64/boot/dts/renesas/android/h3ulcb-kf.dtsi
@@ -42,6 +42,14 @@
 		};
 	};
 
+	lvds: lvds {
+		port {
+			lvds_in: endpoint {
+				remote-endpoint = <&lvds0_out>;
+			};
+		};
+	};
+
 	/delete-node/sound;
 
 	sound_ext: sound@0 {
