--- a/arch/arm64/boot/dts/renesas/android/m3ulcb-kf.dtsi
+++ b/arch/arm64/boot/dts/renesas/android/m3ulcb-kf.dtsi
@@ -42,6 +42,14 @@
 		};
 	};
 
+	lvds: lvds {
+		port {
+			lvds_in: endpoint {
+				remote-endpoint = <&lvds0_out>;
+			};
+		};
+	};
+
 	/delete-node/sound;
 
 	sound_ext: sound@0 {
