dts: fixed dtc warnings
Jira-Id: ADM-4998
Change-Id: I453455a553d29a210b69a1548a616ce3940cbeec
Signed-off-by: Leonid Komaryanskiy <leonid.komaryanskiy@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/android/h3ulcb-kf.dtsi
+++ b/arch/arm64/boot/dts/renesas/android/h3ulcb-kf.dtsi
@@ -58,6 +58,9 @@
 		simple-audio-card,format = "left_j";
 		simple-audio-card,name = "pcm3168a";
 
+		#address-cells = <1>;
+		#size-cells = <0>;
+
 		simple-audio-card,dai-link@0 {
 			/* DAC */
 			reg = <0>;
