--- a/arch/arm64/boot/dts/renesas/android/overlays/r8a7795-salvator-4x2g-overlay.dts
+++ b/arch/arm64/boot/dts/renesas/android/overlays/r8a7795-salvator-4x2g-overlay.dts
@@ -10,25 +10,33 @@
 /dts-v1/;
 /plugin/;
 
-&memory_ch1 {
-	device_type = "memory";
-	/* first 128MB is reserved for secure area. */
-	reg = <0x0 0x48000000 0x0 0x78000000>;
-};
+/{
+	fragment_root {
+		target-path = "/";
+		#address-cells = <2>;
+		#size-cells = <2>;
 
-&memory_ch2 {
-	device_type = "memory";
-	reg = <0x5 0x00000000 0x0 0x80000000>;
-};
+		memory@48000000 {
+			device_type = "memory";
+			/* first 128MB is reserved for secure area. */
+			reg = <0x0 0x48000000 0x0 0x78000000>;
+		};
 
-&memory_ch3 {
-	device_type = "memory";
-	reg = <0x6 0x00000000 0x0 0x80000000>;
-};
+		memory@500000000 {
+			device_type = "memory";
+			reg = <0x5 0x00000000 0x0 0x80000000>;
+		};
 
-&memory_ch4 {
-	device_type = "memory";
-	reg = <0x7 0x00000000 0x0 0x80000000>;
+		memory@600000000 {
+			device_type = "memory";
+			reg = <0x6 0x00000000 0x0 0x80000000>;
+		};
+
+		memory@700000000 {
+			device_type = "memory";
+			reg = <0x7 0x00000000 0x0 0x80000000>;
+		};
+	};
 };
 
 &pciec0 {
