--- a/arch/arm64/boot/dts/renesas/salvator-common.dtsi
+++ b/arch/arm64/boot/dts/renesas/salvator-common.dtsi
@@ -495,27 +495,54 @@
 		asahi-kasei,out6-single-end;
 
 		ports {
-			#address-cells = <1>;
-			#size-cells = <0>;
-			ak4613_endpoint0: endpoint@0 {
-				reg = <0>;
-				remote-endpoint = <&adsp_endpoint0>;
+			port@0 {
+				#address-cells = <1>;
+				#size-cells = <0>;
+
+				ak4613_endpoint0: endpoint@0 {
+					reg = <0>;
+					remote-endpoint = <&adsp_endpoint0>;
+				};
 			};
-			ak4613_endpoint1: endpoint@1 {
-				reg = <1>;
-				remote-endpoint = <&adsp_endpoint1>;
+
+			port@1 {
+				#address-cells = <1>;
+				#size-cells = <0>;
+
+				ak4613_endpoint1: endpoint@1 {
+					reg = <1>;
+					remote-endpoint = <&adsp_endpoint1>;
+				};
 			};
-			ak4613_endpoint2: endpoint@2 {
-				reg = <2>;
-				remote-endpoint = <&adsp_endpoint2>;
+
+			port@2 {
+				#address-cells = <1>;
+				#size-cells = <0>;
+
+				ak4613_endpoint2: endpoint@2 {
+					reg = <2>;
+					remote-endpoint = <&adsp_endpoint2>;
+				};
 			};
-			ak4613_endpoint3: endpoint@3 {
-				reg = <3>;
-				remote-endpoint = <&adsp_endpoint3>;
+
+			port@3 {
+				#address-cells = <1>;
+				#size-cells = <0>;
+
+				ak4613_endpoint3: endpoint@3 {
+					reg = <3>;
+					remote-endpoint = <&adsp_endpoint3>;
+				};
 			};
-			ak4613_endpoint4: endpoint@4 {
-				reg = <4>;
-				remote-endpoint = <&rsnd_endpoint0>;
+
+			port@4 {
+				#address-cells = <1>;
+				#size-cells = <0>;
+
+				ak4613_endpoint4: endpoint@4 {
+					reg = <4>;
+					remote-endpoint = <&rsnd_endpoint0>;
+				};
 			};
 		};
 	};
