sk-kf M3.0 dts: fix the incorrect amount of RAM
An M3.0 SIP has 8Gb RAM, so appropriate dts should be included.

Jira-Id: ADM-5032
Change-Id: If6526f7dc68e07ee452d5963c0bd164d67dc2d38
Signed-off-by: Leonid Komaryanskiy <leonid.komaryanskiy@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/r8a7796-ulcb-kf-android.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7796-ulcb-kf-android.dts
@@ -11,7 +11,14 @@
 
 /dts-v1/;
 #define __M3ULCB_OVERWRITE__
-#include "r8a7796-m3ulcb-kf.dts"
+#include "r8a7796-m3ulcb-2x4g.dts"
+#include "ulcb-kf.dtsi"
 #include "r8a7796-ulcb-android.dts"
 #include "android/m3ulcb-kf.dtsi"
 #include "android/ulcb-kf-cn10.dtsi"
+
+/ {
+	model = "Renesas M3ULCB Kingfisher board based on r8a7796 ES3.0 + with 8GiB (2 x 4 GiB)";
+	compatible = "shimafuji,kingfisher", "renesas,m3ulcb",
+		     "renesas,r8a7796";
+};
