Embed wl18xx conf file into the kernel image
wl18xx driver needs to load binary configuration in the probe phase but
fails due to vendor partition not being mounted at this stage of the
boot process. So add the conf file directly to the kernel image.

Jira-Id: ADM-5036
Signed-off-by: Mykyta Poturai <mykyta.poturai@globallogic.com>
Change-Id: Ic81de423b008b808926735199f7acce780be36b2

--- a/arch/arm64/configs/android_kingfisher_defconfig
+++ b/arch/arm64/configs/android_kingfisher_defconfig
@@ -215,6 +215,8 @@ CONFIG_PCIE_RCAR=y
 CONFIG_PCI_HOST_GENERIC=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
+CONFIG_EXTRA_FIRMWARE=" ti-connectivity/wl18xx-conf.bin"
+CONFIG_EXTRA_FIRMWARE_DIR="drivers/base/firmware_loader/builtin"
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 CONFIG_BLK_DEV_RAM=y
