--- a/arch/arm64/boot/dts/renesas/android/overlays/ulcb-kf-adsp-overlay.dts
+++ b/arch/arm64/boot/dts/renesas/android/overlays/ulcb-kf-adsp-overlay.dts
@@ -12,15 +12,29 @@
 /plugin/;
 
 &sound_ext {
-	simple-audio-card,dai-link@1 {
+	simple-audio-card,dai-link@2 {
+		/* DAC */
 		format = "left_j";
-		cpu@0 {
+		cpu {
 			sound-dai = <&rcar_adsp_sound 4>;
 		};
-		codec@0 {
-			sound-dai = <&pcm3168a>;
+		codec {
+			sound-dai = <&pcm3168a 0>;
 			dai-tdm-slot-num = <8>;
-			dai-tdm-slot-width = <24>;
+			dai-tdm-slot-width = <32>;
+			system-clock-frequency = <24576000>;
+		};
+	};
+	simple-audio-card,dai-link@3 {
+		/* ADC */
+		format = "left_j";
+		cpu {
+			sound-dai = <&rcar_adsp_sound 4>;
+		};
+		codec {
+			sound-dai = <&pcm3168a 1>;
+			dai-tdm-slot-num = <8>;
+			dai-tdm-slot-width = <32>;
 			system-clock-frequency = <24576000>;
 		};
 	};
