make CMS functionality depended on CONFIG_DRM_RCAR_CMS
Jira-Id: ADM-5125
Signed-off-by: Leonid Komaryanskiy <leonid.komaryanskiy@globallogic.com>
Change-Id: Ifc6e4b8e4c95dea40b3460f9faa68f399918ebcb

--- a/drivers/gpu/drm/rcar-du/Kconfig
+++ b/drivers/gpu/drm/rcar-du/Kconfig
@@ -47,3 +47,8 @@ config DRM_RCAR_VSP
 config DRM_RCAR_WRITEBACK
 	bool
 	default y if ARM64
+
+config DRM_RCAR_CMS
+	bool "Enable Color Management Support."
+	depends on ARCH_RENESAS
+	default n
