add CMS overlays
Jira-Id: ADM-5125
Signed-off-by: Leonid Komaryanskiy <leonid.komaryanskiy@globallogic.com>
Change-Id: I7ee068a57c17c597f588fcfe7891ea3bd2622c5c

--- a/arch/arm64/boot/dts/renesas/android/overlays/Makefile
+++ b/arch/arm64/boot/dts/renesas/android/overlays/Makefile
@@ -12,13 +12,18 @@ dtb-$(CONFIG_ARCH_R8A7795) += lvds-AA104XD12-overlay.dtb
 dtb-$(CONFIG_ARCH_R8A7795) += lvds-AA121TD01-overlay.dtb
 dtb-$(CONFIG_ARCH_R8A7795) += lvds-TX31D200VM0BAA-overlay.dtb
 dtb-$(CONFIG_ARCH_R8A7795) += android-avb-overlay.dtb
+dtb-$(CONFIG_ARCH_R8A7795) += h3-salvator-cms-overlay.dtb
+dtb-$(CONFIG_ARCH_R8A7795) += h3-ulcb-kf-cms-overlay.dtb
 dtb-$(CONFIG_ARCH_R8A7796) += lvds-AA104XD12-overlay.dtb
 dtb-$(CONFIG_ARCH_R8A7796) += lvds-AA121TD01-overlay.dtb
 dtb-$(CONFIG_ARCH_R8A7796) += lvds-TX31D200VM0BAA-overlay.dtb
 dtb-$(CONFIG_ARCH_R8A7796) += android-avb-overlay.dtb
+dtb-$(CONFIG_ARCH_R8A7796) += m3-salvator-cms-overlay.dtb
+dtb-$(CONFIG_ARCH_R8A7796) += m3-ulcb-kf-cms-overlay.dtb
 dtb-$(CONFIG_ARCH_R8A77965) += lvds-AA104XD12-overlay.dtb
 dtb-$(CONFIG_ARCH_R8A77965) += lvds-AA121TD01-overlay.dtb
 dtb-$(CONFIG_ARCH_R8A77965) += lvds-TX31D200VM0BAA-overlay.dtb
 dtb-$(CONFIG_ARCH_R8A77965) += android-avb-overlay.dtb
+dtb-$(CONFIG_ARCH_R8A77965) += m3n-salvator-cms-overlay.dtb
 
 always		:= $(dtb-y)
