dts/kf-cn-10: Set DVP bus bits order
Swap data bits order [9:0] -> [0:9]

Option to bootargs also can change bits order:
RDACM20: ov10635.dvp_order=1
RDACM21: ov490.dvp_order=1

Signed-off-by: Dmytro Prokopchuk <dmytro.prokopchuk@globallogic.com>
Jira_ID: ADM-5174
Change-Id: I9347480c39796eeb822e1c24e20b1edcab360a2e

--- a/arch/arm64/boot/dts/renesas/android/ulcb-kf-cn10.dtsi
+++ b/arch/arm64/boot/dts/renesas/android/ulcb-kf-cn10.dtsi
@@ -129,7 +129,7 @@
 				camera@60 {
 					compatible = LVDS_CAMERA;
 					reg = <0x60 0x0c>;
-
+					dvp-order = <1>;
 					port {
 						camera_out0: endpoint {
 							remote-endpoint = <&deser_in0>;
@@ -147,7 +147,7 @@
 				camera@61 {
 					compatible = LVDS_CAMERA;
 					reg = <0x61 0x0d>;
-
+					dvp-order = <1>;
 					port {
 						camera_out1: endpoint {
 							remote-endpoint = <&deser_in1>;
@@ -164,7 +164,7 @@
 				camera@62 {
 					compatible = LVDS_CAMERA;
 					reg = <0x62 0x0e>;
-
+					dvp-order = <1>;
 					port {
 						camera_out2: endpoint {
 							remote-endpoint = <&deser_in2>;
@@ -181,7 +181,7 @@
 				camera@63 {
 					compatible = LVDS_CAMERA;
 					reg = <0x63 0x0f>;
-
+					dvp-order = <1>;
 					port {
 						camera_out3: endpoint {
 							remote-endpoint = <&deser_in3>;
