skkf-dts: make common dtsi for skkf M3 and H3 boards
Jira-Id: ADM-5170
Signed-off-by: Leonid Komaryanskiy <leonid.komaryanskiy@globallogic.com>
Change-Id: I9e40b66f4de2ffa3fa4dcee6011d428cf53d6813

--- a/arch/arm64/boot/dts/renesas/r8a7795-ulcb-kf-android.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-ulcb-kf-android.dts
@@ -13,5 +13,5 @@
 #define __H3ULCB_OVERWRITE__
 #include "r8a7795-h3ulcb-kf.dts"
 #include "r8a7795-ulcb-android.dts"
-#include "android/h3ulcb-kf.dtsi"
+#include "android/ulcb-kf.dtsi"
 #include "android/ulcb-kf-cn10.dtsi"
